feat(user-mgmt): scaffold example-user-management-service (T1)
Adds a runnable, empty-but-wired second example module mirroring the catalog
app's conventions: Spring Boot 3.4 + OpenAPI codegen (interfaceOnly) + the
opa-abac starter, Liquibase + Postgres, Testcontainers ITs, ddl-auto: validate.

- build.gradle.kts, UserManagementApplication, application.yml (db `usermgmt`)
- empty Liquibase master (schema lands in T2)
- minimal openapi/user-mgmt-api.yaml (GET /api/v1/ping) + PingController
- package skeleton config/domain/service/web (the decided layered layout)
- wired into settings.gradle.kts
- ContextLoadsIT: boots the wired context against real Postgres, validate clean

Whole-repo `./gradlew build` green (both example apps + 4 library modules).
Library public APIs untouched — this module only consumes the starter.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>